workshop03/myapp-ingress.yml
apiVersion: networking.k8s.io/v1beta1

kind: Ingress
metadata:
  name: myapp-ing
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: "/"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"

spec: 
  backend:
    serviceName: myappv2svc
    servicePort: 80
  rules:
    - host: "appv1.157.230.193.68.nip.io"
      http:
        paths:
          - backend:
              serviceName: myappv1svc
              servicePort: 80
    - host: "appv2.157.230.193.68.nip.io"
      http:
        paths:
          - backend:
              serviceName: myappv2svc
              servicePort: 80
